style.css
/* ... */
.inputForm {
    width: 100%;
    padding: 0.7em;
    border-radius: 10px;
    border: #000 solid 2px;
    font-size: 0.9em;
}

.buttonForm {
    border-radius: 15px;
    padding: 0.8em 1.8em;
    margin-bottom: 2em;
    margin-top: 2em;
    background: linear-gradient(45deg, #115AA2,#000000);
    color: white;
    border: none;
    font-size: 1em;
    text-transform: uppercase;    
}

hr{
    width: 85%;
    margin-bottom: 2%;
}



/* ============================
        PAGINA VIDEOGIOCO
============================ */

#mainVideogioco{
    display: flex;
    flex-direction: column;
    gap: 1em;
    color: var(--txtcolor);
    width: 100%;
    background: #282525;
}
.backgroundPannelloVideogioco{
    background: url('assets/royalty-free-music-for-videogames.png') no-repeat center center/cover;
    background-color: var(--bgcolor);
    width: 100%;
    border-radius: 10px;
}
.pannelloVideogioco {
    color: var(--txtcolor);
    display: flex;
    flex-direction: row;
    padding-top: 2em;
    padding-bottom: 2em;
    padding-left: 3em;
    justify-content: left;
    gap: 2em;
    align-items:center; 
    box-sizing: border-box; 
    width: 100%;
    height: 35vh;
    border-radius: 10px;
}

.pannelloVideogioco h1{
    font-size: 2.5em;
    line-height: 1.5em;
    max-width: 100%;
}

.copertinaVideogioco{
    width: 25%;
    height: auto;
    border-radius: 20px;
}
.videogiocoPegiEAcquisto{
    box-sizing:border-box;
    color: var(--txtcolor);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    
    width: 100%;
    padding: 1em; 
    padding-left: 1.5em;
    padding-right: 1.5em;
}
.videogiocoPegi img{
    width: 2.6em;
    height: auto;
    border-radius: 2px;
}
.videogiocoPegi {
    display: flex;
    flex-direction: column;
    gap: 0.4em;
    height: 100%;
    box-sizing: border-box;
    font-weight: bold;
    font-size: 0.85em;
    align-items: center;
    width: 20%;
}
.videogiocoAcquisto{
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1em;
    padding: 1em;
    padding-left: 0em;
    padding-top: 2em;
}


.videogiocoAcquisto button {
    padding: 0.5em 1em;
    font-size: 1em;
    background-color: #f2f2f2;
    border-radius: 4px;
}

#mainVideogioco h2{
    font-size: 1.5em;
    font-weight: bold;
    text-align: center;
}


.boxDescrizioneECategorie{
    display: flex;
    flex-direction: row;
    max-width: 100%;
    box-sizing: border-box;
    padding: 1em;
    padding-left: 1.5em;
    padding-right: 1.5em;
    padding-bottom: 1em;
    background-color: var(--homeboxcolor);
    border-radius: 25px;
    color: #000;
    margin: 1em;
    font-size: 1em;
}
.boxCategorie{
    display: flex;
    flex-direction: column;
    gap: 1em;
    padding: 1em;
    box-sizing: border-box;
    padding-left: 5em;
    min-width: 50%;
}
.boxCategorie dt{
    font-weight: bold;
}
.boxCategorie dd{
    margin-top: 0.1em;
    margin-bottom: 0.3em;
}
.boxDescrizioneEInfo{
    display: flex;
    flex-direction: column;
    gap: 1em;
    padding: 1em;
    width: 50%;
}
.infoVideogioco{
    display: flex;
    flex-direction: row;
    gap: 2em;
}


/* ============================
        PAGINA PROFILO
============================ */
.profileContainer {
    display: flex;
    flex-direction: column;
    margin: 2em 10%;
    gap: 2.5em;  
}

.profileBox {
    display: flex;
    flex-direction: column;
    flex: 1 1;
    background: var(--homeboxcolor);
    border-radius: 10px;
    text-align: center;
}

.profilePicture {
    border: 2px solid #000;
    border-radius: 50%;
    margin-top: 1em;
    width: 120px;
    height: 120px;
}

.profileBoxContainer{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 1em;
}

.profileBox h2 {
    font-size: 1.5em;
    margin-top: 1em;
    color: #000;
}

.userDetailsItem {
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid #FFF;
    padding: 0.5em;
}

.userDetails dl{
    display: flex;
    flex-direction: column;
    padding: 0.5em;
    padding-left: 1.5em;
    padding-right: 1.5em;
    border-radius: 25px;
    color: #000;
    font-size: 1em;
}

.userDetailsItem dt{
    font-weight: bold;
}

.buttonBoxProfile{
    display: inline-block;
    padding: 0.5em 1em;
    background:#D13500;
    border: 2px solid #000;
    color: white;
    text-decoration: none;
    border-radius: 10px;
    margin-top: 1em;
    margin-bottom: 1em;
}

.subscriptionDetailsItem{
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid #FFF;
    padding: 0.5em;
}

.subscriptionDetailsItem dt {
    font-weight: bold;
}

.subscriptionContent dl{
    display: flex;
    flex-direction: column;
    padding: 0.5em;
    padding-left: 1.5em;
    padding-right: 1.5em;
    border-radius: 25px;
    color: #000;
    font-size: 1em;
    margin-top: 2em;
    margin-bottom: 1em;
}

.subscriptionContent {
    flex: 1 1;
}


.gamesList {
    margin-top: 1em;
    list-style: none;
    margin: 1em 2em;
}

.gameItem {
    display: flex;
    align-items: center;
    padding: 1rem;
    border-bottom: 1px solid #FFF;
}

.gameItem h3 {
    font-size: 1.3em;
    color: #000;
}

.gameThumbnail {
    width: 100px;
    height: 100px;
    object-fit: cover;
    border-radius: 5px;
    margin-right: 1em;
}

.gameInfo {
    flex: 1;
}

.purchaseDate {
    color: #404040;
    font-size: 0.9em;
}

/* ============================
        PAGINE ERRORE
============================ */

.error-page {
    background-color: white;
    border: 1px solid white;
}

.error-main {
    background-color: white;
}

.error-container {
    justify-self: center;
    margin: 1em 2em;
    display: flex;
    justify-content: center;
    background-color: white;
}

.error-img {
    max-width: 35%;
    height: auto;
    align-self: center;
    margin-top: 1.5em;
}
/* ... */

